--- a/Cinematch-Mobile/home.html
+++ b/Cinematch-Mobile/home.html
@@ -14,7 +14,7 @@
 
   <header class="topo-mobile">
     <span class="logo">CineMatch</span>
-    <img id="fotoTopo" class="avatar" src="" onclick="irConfig()">
+    <img id="fotoTopo" src="./avatar.png">
   </header>
 
   <div class="tabs">
@@ -26,5 +26,6 @@
 
   <script src="home.js"></script>
 </body>
+
 
 </html>
