--- a/Cinematch-Mobile/home.html
+++ b/Cinematch-Mobile/home.html
@@ -14,7 +14,12 @@
 
   <header class="topo-mobile">
     <span class="logo">CineMatch</span>
-    <img id="fotoTopo" src="./avatar.png">
+<img
+  id="fotoTopo"
+  class="avatar"
+  src="./avatar.png"
+  onclick="irConfig()"
+/>
   </header>
 
   <div class="tabs">
@@ -29,3 +34,4 @@
 
 
 </html>
+
