--- a/Cinematch-Mobile/configuracoes.html
+++ b/Cinematch-Mobile/configuracoes.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="./mobile.css">
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="/manifest.json">
     <meta name="theme-color" content="#e50914">
 
 </head>
@@ -52,5 +52,6 @@
 
     <script src="configuracoes.js"></script>
 </body>
+
 
 </html>
