--- a/Cinematch-Mobile/home.html
+++ b/Cinematch-Mobile/home.html
@@ -6,7 +6,7 @@
   <title>CineMatch • Home</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="mobile.css">
-  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="/manifest.json">
   <meta name="theme-color" content="#e50914">
 </head>
 
@@ -34,4 +34,5 @@
 
 
 </html>
+
 
