--- a/Cinematch-Mobile/configuracoes.html
+++ b/Cinematch-Mobile/configuracoes.html
@@ -22,6 +22,7 @@
             <img id="fotoPerfil" class="foto-config" src="./avatar.png">
             <input type="file" id="fotoInput" hidden>
             <button onclick="editarFoto()">Alterar foto</button>
+            <button onclick="removerFoto()">Remover foto</button>
         </div>
 
         <div class="config-bloco">
@@ -55,3 +56,4 @@
 
 
 </html>
+
