--- a/Cinematch-Front/cadastro.html
+++ b/Cinematch-Front/cadastro.html
@@ -17,14 +17,18 @@
       <input type="text" id="nome" placeholder="Nome">
       <input type="email" id="email" placeholder="E-mail">
       <input type="password" id="senha" placeholder="Senha">
-      <p style="margin-top:10px">Gêneros favoritos:</p>
-
-      <input type="text" id="genreInput" placeholder="Gêneros favoritos">
-
-      <div id="suggestions" style="text-align:left"></div>
-
-      <div id="selectedGenres" style="margin-top:10px"></div>
-
+<p class="label">Escolha seus gêneros favoritos</p>
+<div class="genres-container" id="genresContainer">
+  <button type="button" class="genre">Ação</button>
+  <button type="button" class="genre">Drama</button>
+  <button type="button" class="genre">Comédia</button>
+  <button type="button" class="genre">Terror</button>
+  <button type="button" class="genre">Ficção Científica</button>
+  <button type="button" class="genre">Romance</button>
+  <button type="button" class="genre">Animação</button>
+  <button type="button" class="genre">Fantasia</button>
+  <button type="button" class="genre">Suspense</button>
+</div>
       <button onclick="registrar()">Cadastrar</button>
 
       <p style="margin-top:10px">
@@ -40,3 +44,4 @@
 </body>
 
 </html>
+
