--- a/Cinematch-Front/detalhes.html
+++ b/Cinematch-Front/detalhes.html
@@ -12,10 +12,10 @@
 
   <div class="detalhes-container">
 
-    <div class="poster-container">
-      <div id="favorito" class="coracao" onclick="toggleFavorito()">❤</div>
-      <img id="poster">
-    </div>
+  <div class="acoes-poster">
+  <div id="assistirDepois" class="icone" title="Assistir depois" onclick="marcarAssistirDepois()">⏰</div>
+  <div id="jaAssistido" class="icone" title="Já assistido" onclick="marcarJaAssistido()">✅</div>
+  </div>
 
     <div class="detalhes-info">
       <h2 id="titulo"></h2>
@@ -31,5 +31,6 @@
   <script src="detalhes.js"></script>
 
 </body>
+
 
 </html>
