--- a/Cinematch-Front/listas.html
+++ b/Cinematch-Front/listas.html
@@ -1,40 +1,36 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
   <meta charset="UTF-8">
-  <title>Minhas Listas - CineMatch</title>
+  <title>Minhas Listas · CineMatch</title>
   <link rel="icon" href="favicon.ico">
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
+  <!-- TOPO -->
+  <header class="topo">
+    <div class="logo">🎬 CineMatch</div>
 
-  <div class="topo">
-    <div class="logo">CineMatch</div>
+    <nav class="menu">
+      <a href="home.html">Recomendações</a>
+      <a href="listas.html" class="ativo">Minhas Listas</a>
+    </nav>
 
-    <div class="menu">
-      <a href="/home.html">Recomendações</a>
-      <a href="/listas.html">Minhas Listas</a>
-    </div>
-
-    <div class="usuario">
-      <a href="/configuracoes.html" class="perfil">
-        <img src="./avatar.png" id="fotoTopo">
-
-        <span id="nomeTopo"></span>
-      </a>
-    </div>
-  </div>
+    <a href="configuracoes.html" class="usuario">
+      <img src="./avatar.png" id="fotoTopo">
+      <span id="nomeTopo"></span>
+    </a>
+  </header>
 
   <!-- CONTEÚDO -->
-  <div id="conteudo">
+  <main class="listas-container">
     <h2>Minhas Listas</h2>
-    <div id="listas"></div>
-  </div>
 
-  <script src="/listas.js"></script>
+    <div id="listas" class="listas-grid"></div>
+  </main>
+
+  <script src="listas.js"></script>
 </body>
-
 </html>
