--- a/Cinematch-Front/detalhes.html
+++ b/Cinematch-Front/detalhes.html
@@ -11,11 +11,18 @@
 <body>
 
   <div class="detalhes-container">
-
-  <div class="acoes-poster">
-  <div id="assistirDepois" class="icone" title="Assistir depois" onclick="marcarAssistirDepois()">⏰</div>
-  <div id="jaAssistido" class="icone" title="Já assistido" onclick="marcarJaAssistido()">✅</div>
+    
+<div class="poster-container">
+  <div id="btn-assistir-depois" class="badge badge-esquerda" title="Assistir depois">
+    ⏱
   </div>
+
+  <div id="btn-ja-assistido" class="badge badge-direita" title="Já assistido">
+    ✔
+  </div>
+
+  <img id="poster">
+</div>
 
     <div class="detalhes-info">
       <h2 id="titulo"></h2>
@@ -34,3 +41,4 @@
 
 
 </html>
+
