--- a/Cinematch-Front/detalhes.html
+++ b/Cinematch-Front/detalhes.html
@@ -11,33 +11,31 @@
 <body>
 
   <div class="detalhes-container">
-    
-<div class="poster-container">
-  <img id="poster" src="" alt="Poster do filme">
 
-  <!-- Assistir depois -->
-  <div
-    id="btn-assistir-depois"
-    class="badge badge-esquerda"
-    title="Assistir depois"
-  >
-    ⏰
-  </div>
+    <!-- POSTER + BOTÕES -->
+    <div class="poster-container">
+      <img id="poster" src="" alt="Poster do filme">
 
-  <!-- Já assistido -->
-  <div
-    id="btn-ja-assistido"
-    class="badge badge-direita"
-    title="Já assistido"
-  >
-    ✔
-  </div>
-</div>
+      <!-- Assistir depois -->
+      <div
+        id="btn-assistir-depois"
+        class="badge badge-esquerda"
+        title="Assistir depois"
+      >
+        ⏰
+      </div>
 
+      <!-- Já assistido -->
+      <div
+        id="btn-ja-assistido"
+        class="badge badge-direita"
+        title="Já assistido"
+      >
+        ✔
+      </div>
+    </div>
 
-  <img id="poster">
-</div>
-
+    <!-- INFORMAÇÕES -->
     <div class="detalhes-info">
       <h2 id="titulo"></h2>
       <p id="generos"></p>
@@ -52,8 +50,4 @@
   <script src="detalhes.js"></script>
 
 </body>
-
-
 </html>
-
-
