--- a/Cinematch-Front/listas.html
+++ b/Cinematch-Front/listas.html
@@ -10,19 +10,22 @@
 <body>
 
   <!-- TOPO -->
-  <header class="topo">
-    <div class="logo">🎬 CineMatch</div>
+<div class="topo">
+  <div class="logo"> CineMatch</div>
 
-    <nav class="menu">
-      <a href="home.html">Recomendações</a>
-      <a href="listas.html" class="ativo">Minhas Listas</a>
-    </nav>
+  <div class="menu">
+    <a href="home.html">Recomendações</a>
+    <a href="listas.html" class="ativo">Minhas Listas</a>
+  </div>
 
-    <a href="configuracoes.html" class="usuario">
-      <img src="./avatar.png" id="fotoTopo">
+  <div class="usuario">
+    <a href="configuracoes.html" class="perfil">
+      <img id="fotoTopo" src="./avatar.png">
       <span id="nomeTopo"></span>
     </a>
-  </header>
+  </div>
+</div>
+
 
   <!-- CONTEÚDO -->
   <main class="listas-container">
@@ -34,3 +37,4 @@
   <script src="listas.js"></script>
 </body>
 </html>
+
