--- a/Cinematch-Front/cadastro.html
+++ b/Cinematch-Front/cadastro.html
@@ -17,8 +17,14 @@
       <input type="text" id="nome" placeholder="Nome">
       <input type="email" id="email" placeholder="E-mail">
       <input type="password" id="senha" placeholder="Senha"
-        
-<p class="label">Escolha seus gêneros favoritos</p>
+
+        <p class="label">
+  Escolha seus gêneros favoritos
+  <small style="display:block; color:#aaa;">
+    (máximo 3)
+  </small>
+</p>
+
 
 <div class="genre-select">
   <div class="selected-genres" id="selectedGenres"></div>
@@ -49,6 +55,7 @@
 </body>
 
 </html>
+
 
 
 
